// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`routes > accessRequest > getAccessRequest > 200 > ok 1`] = `
{
  "accessRequest": {
    "_id": "664e1aa8bda1f88c28e1c0ce",
    "commentIds": [
      "6646f5953391b094ca4f55ee",
    ],
    "comments": [],
    "deleted": false,
    "id": "test-access-request-13623",
    "modelId": "test-model-4342",
  },
}
`;

exports[`routes > accessRequest > getAccessRequest > audit > expected call 1`] = `
{
  "_id": "664e1aa8bda1f88c28e1c0ce",
  "commentIds": [
    "6646f5953391b094ca4f55ee",
  ],
  "deleted": false,
  "id": "test-access-request-13623",
  "modelId": "test-model-4342",
}
`;
